--- a/main.css
+++ b/main.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0 16px;
     box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
 }
 
 header .container img {
     height: 300px;
+    padding: 0;
 }
 
 header nav li {
@@ -18,7 +20,6 @@ header nav li a{
     color:#e8d501;
     text-decoration: none;
     font-size: 50px;
-    font-family: 'Oswald', sans-serif;
 }
 
 header .container{
@@ -26,6 +27,13 @@ header .container{
     align-items: center;
     justify-content: space-between;
     }
+
+.body {
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 26px;
+}
 
 body hr{
     height: 5px;
@@ -35,12 +43,18 @@ body hr{
 
 form{
     display: flex;
+    align-items: center;
     max-width: 640px;
     width: 100%;
     justify-content: space-between;
     margin-top: 56px;
     margin-bottom: 56px;
-    font-family: 'Oswald', sans-serif;
+}
+
+form img{
+    height: 50px;
+    width: 100%;
+    background-color: #ffffff;
 }
 
 form button {
@@ -60,8 +74,29 @@ form button:hover{
 
 form input{
     font-size: 24px;
-    background-color: #fff;
     border: none;
+    background-color: #ffff;
     border-bottom:2px solid #f7a059;
-    padding: 8px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+table{
+    width: 100%;
+}
+
+table th {
+    border-bottom: 2px solid #02a3e9;
+    border-radius: 10px;
+    padding: 16px;
+    font-size: 24;
+    font-weight: bold;
+}
+
+table td{
+    text-align: center;
+    padding: 16px 0;
+    align-items: center;
+    font-size: 28px;
+    border:none
 }
