--- a/main.css
+++ b/main.css
@@ -41,6 +41,12 @@ body hr{
     border: none;
 }
 
+body h1 {
+    color:#e8d501;
+    text-decoration: none;
+    font-size: 60px;
+}
+
 form{
     display: flex;
     align-items: center;
@@ -76,7 +82,7 @@ form input{
     font-size: 24px;
     border: none;
     background-color: #ffff;
-    border-bottom:2px solid #f7a059;
+    border-bottom:3px solid #fd9f53;
     border-radius: 10px;
     padding: 10px;
 }
