--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ form{
     align-items: center;
     max-width: 640px;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 56px;
     margin-bottom: 56px;
 }
@@ -80,11 +80,11 @@ form button:hover{
 
 form input{
     font-size: 24px;
-    border: none;
     background-color: #ffff;
-    border-bottom:3px solid #fd9f53;
+    border:3px solid #fd9f53;
     border-radius: 10px;
     padding: 10px;
+    padding-right: 100px;
 }
 
 table{
@@ -105,4 +105,20 @@ table td{
     align-items: center;
     font-size: 28px;
     border:none
+}
+
+footer {
+    padding: 15px;
+    margin-top: 180px;
+}
+
+.body ul li{
+    font-size: 30px;
+    list-style: none;
+    color:#03fe4a;
+    cursor: pointer;
+}
+
+.riscado {
+    text-decoration: line-through;
 }
