--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ html{
 
 .body {
     max-width: 960px;
-    width: 100%;
+    width: 100vw;
     margin: 0 auto;
     padding-left: 26px;
 }
@@ -59,17 +59,15 @@ header > .container #logo {
 
 nav {
     padding: 0;
-    display: flex;
+    display: none;
     margin-left: 16px;
     font-size: 18px;
-
 }
 
 nav li{
     list-style: none;
     display: inline;
     margin-right: 16px;
-    font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -77,7 +75,20 @@ nav li{
 nav li a{
     color:#000000;
     text-decoration: none;
-    font-size: 50px;
+    font-size: 26px;
+}
+
+.menu-hamburguer{
+    width: 32px;
+    cursor: pointer;
+}
+
+.menu-hamburguer span{
+    height: 2px;
+    width: 100%;
+    background-color: #fff;
+    display: block;
+    margin-bottom: 4px;
 }
 
 .slides img{
@@ -162,4 +173,10 @@ footer {
 
 .riscado {
     text-decoration: line-through;
+}
+
+@media screen and (max-width: 640px) {
+    body {
+        background-color: red;
+    }
 }
